# python-input

./: README.md  pyproject.toml
examples/: keyboard_and_mouse.py
python_input/: __init__.py  _input.py
