[tool.poetry]
name = "python-input"
version = "0.1.1"
description = ""
authors = ["Will Gale <willjgale@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"homepage" = "https://github.com/Will-J-Gale/python-input"
