[tool.poetry]
name = "python-input"
version = "0.1.3"
description = ""
authors = ["Will Gale <willjgale@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/Will-J-Gale/python-input"

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"